test/error/s_badmeta.lua
hstructure S
	proxytable;
	o : object;
	meta : table; -- must be listed before regular slots
end
